<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_words">

    <fragment
        android:id="@+id/navigation_words"
        android:name="com.example.improvevocabulary.presentation.wordsFragment.WordsFragment"
        android:label="@string/title_words"
        tools:layout="@layout/fragment_words" />

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.example.improvevocabulary.presentation.tests.TestsFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.improvevocabulary.presentation.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>