<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_choose_language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="64dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_languages_to_study"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginBottom="12dp"
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_from"
        app:layout_constraintBottom_toTopOf="@+id/sp_language_from_learning"
        app:layout_constraintStart_toStartOf="@+id/sp_language_from_learning" />

    <Spinner
        android:layout_marginTop="64dp"
        android:id="@+id/sp_language_from_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/sp_language_of_learning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_of"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_of"
        app:layout_constraintBottom_toTopOf="@+id/sp_language_of_learning"
        app:layout_constraintStart_toStartOf="@+id/sp_language_of_learning" />

    <Spinner
        android:id="@+id/sp_language_of_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose"
        app:layout_constraintEnd_toEndOf="@+id/sp_language_of_learning"
        app:layout_constraintStart_toStartOf="@+id/sp_language_from_learning"
        app:layout_constraintTop_toBottomOf="@+id/sp_language_of_learning" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/no_language"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_choose"
        app:layout_constraintStart_toStartOf="@+id/btn_choose"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose" />

</androidx.constraintlayout.widget.ConstraintLayout>