<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_theme"
        app:layout_constraintBottom_toBottomOf="@+id/sp_app_theme"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_app_theme" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_interface"
        app:layout_constraintBottom_toBottomOf="@+id/sp_language"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/sp_language" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:lines="2"
        android:text="@string/suggest_repetition_of_words"
        app:layout_constraintBottom_toBottomOf="@+id/swSuggestRepetitionOfWords"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/swSuggestRepetitionOfWords" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_from_language"
        app:layout_constraintBottom_toBottomOf="@+id/sp_language_from_learning"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/sp_language_from_learning" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_to_learn"
        app:layout_constraintBottom_toBottomOf="@+id/sp_language_of_learning"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/sp_language_of_learning" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_dictionary"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteAllWords"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/btnDeleteAllWords" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Spinner
        android:layout_marginBottom="8dp"
        android:id="@+id/sp_app_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/app_themes"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        tools:layout_editor_absoluteY="187dp" />

    <Spinner
        android:id="@+id/sp_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/sp_app_theme"
        app:layout_constraintStart_toStartOf="@+id/sp_app_theme"
        app:layout_constraintTop_toBottomOf="@+id/sp_app_theme" />

    <!-- To Do orange color in included option -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swSuggestRepetitionOfWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/sp_language"
        app:layout_constraintTop_toBottomOf="@+id/sp_language" />

    <Spinner
        android:id="@+id/sp_language_from_learning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sp_language_of_learning"
        app:layout_constraintEnd_toEndOf="@+id/sp_app_theme"
        app:layout_constraintStart_toStartOf="@+id/sp_app_theme"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Spinner
        android:id="@+id/sp_language_of_learning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:entries="@array/languages"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAllWords"
        app:layout_constraintEnd_toEndOf="@+id/sp_app_theme"
        app:layout_constraintStart_toStartOf="@+id/sp_app_theme" />

    <!-- To Do Clicable button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteAllWords"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="48dp"
        android:background="@color/red"
        android:text="@string/clear_dictionary_button"
        app:layout_constraintTop_toBottomOf="@+id/sp_language_of_learning"

        app:layout_constraintStart_toStartOf="@+id/sp_app_theme"
        tools:layout_editor_absoluteY="522dp" />


</androidx.constraintlayout.widget.ConstraintLayout>